--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -23,23 +24,29 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:background="@color/gornyBackground"
-            app:trackColor="@color/zwierzakBackground"
-            android:text="Haaaaaaaaaaaalo" />
+            android:text="Haaaaaaaaaaaalo"
+            android:textColor="@color/black"
+            app:trackColor="@color/powitalnyBackground" />
     </LinearLayout>
+
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/srodkowyKontener"
         android:name="com.maciejka.petfocus.fragment_ekranPowitalny"
-        android:layout_width="match_parent"
-        android:layout_height="550dp"
+        android:layout_width="417dp"
+        android:layout_height="620dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gornyKontener"
+        app:layout_constraintVertical_bias="0.0"
         tools:layout="@layout/fragment_ekran_powitalny" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:id="@+id/linearLayout"
+        android:layout_width="413dp"
+        android:layout_height="75dp"
         android:weightSum="3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
