--- a/app/src/main/res/layout/fragment_pomodoro.xml
+++ b/app/src/main/res/layout/fragment_pomodoro.xml
@@ -3,12 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PomodoroFragment">
+    tools:context=".PomodoroFragment"
+    android:background="@color/pomodoroBackground">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="44dp"
+        android:text="@string/tekstTimerPomodoro"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        android.layout_gravity = "center"/>
+
+        />
 
 </FrameLayout>
