--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,20 +13,33 @@
         android:id="@+id/gornyKontener"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:weightSum="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/checkZadania"
+            android:layout_width="37dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/baseline_flash_on_24"
+            android:paddingRight="-20dp"
+            android:background="@color/gornyBackground"/>
 
         <com.google.android.material.slider.Slider
             android:id="@+id/kondycja"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:valueFrom="0"
+            android:valueTo="100"
+            android:value="75"
             android:background="@color/gornyBackground"
-            android:text="Haaaaaaaaaaaalo"
-            android:textColor="@color/black"
-            app:trackColor="@color/powitalnyBackground" />
+            app:trackColorActive="@color/zwierzakBackground"
+            app:thumbColor="@color/zwierzakBackground"
+            android:enabled="false"/>
+
+
     </LinearLayout>
 
 
