--- a/app/src/main/res/layout/fragment_pomodoro25.xml
+++ b/app/src/main/res/layout/fragment_pomodoro25.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PomodoroFragment"
+    tools:context=".Pomodoro25Fragment"
     android:background="@color/pomodoroBackground">
 
     <!-- TODO: Update blank fragment layout -->
