--- a/app/src/main/res/layout/fragment_to_do.xml
+++ b/app/src/main/res/layout/fragment_to_do.xml
@@ -45,10 +45,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/wykonaneZadanie"
-                android:text="Nowe Zadanie"/>
+                android:text="Nowe Zadanie"
+                android:layout_marginBottom="60dp"/>
         </LinearLayout>
-
-
-
     </ScrollView>
 </LinearLayout>
