--- a/app/src/main/res/layout/fragment_zwierzak.xml
+++ b/app/src/main/res/layout/fragment_zwierzak.xml
@@ -3,19 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ZwierzakFragment"
     android:orientation="vertical"
     android:background="@color/zwierzakBackground">
-
-    <!-- TODO: Update blank fragment layout -->
-
-
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:text="@string/tekstZwierzak"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="25sp"/>
 
     <ImageView
@@ -28,13 +26,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:columnCount="10"
+        android:columnCount="3"
         android:rowCount="2">
 
         <Button
             android:id="@+id/btnKarmienie"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+
             android:text="Karmienie"
             android:textSize="15sp"
             android:backgroundTint="@color/powitalnyBackground"/>
@@ -56,11 +55,59 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_row="0"
-            android:layout_column="3"
+            android:layout_column="2"
             android:layout_margin="5dp"
             android:backgroundTint="@color/powitalnyBackground"
             android:text="Mycie"
             android:textSize="15sp" />
+
+        <com.google.android.material.slider.Slider
+            android:id="@+id/karmienieSlider"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="0dp"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:valueFrom="0"
+            android:valueTo="100"
+            android:value="75"
+            android:background="@color/gornyBackground"
+            app:trackColorActive="@color/pomodoroBackground"
+            app:thumbColor="@color/pomodoroBackground"
+            android:enabled="false"/>
+
+        <com.google.android.material.slider.Slider
+            android:id="@+id/zabawaSlider"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="0dp"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:valueFrom="0"
+            android:valueTo="100"
+            android:value="75"
+            android:background="@color/gornyBackground"
+            app:trackColorActive="@color/zwierzakBackground"
+            app:thumbColor="@color/zwierzakBackground"
+            android:enabled="false"/>
+
+        <com.google.android.material.slider.Slider
+            android:id="@+id/mycieSlider"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="0dp"
+            android:layout_row="1"
+            android:layout_column="2"
+            android:valueFrom="0"
+            android:valueTo="100"
+            android:value="75"
+            android:background="@color/gornyBackground"
+            app:trackColorActive="@color/toDoBackground"
+            app:thumbColor="@color/toDoBackground"
+            android:enabled="false"/>
 
     </GridLayout>
 
